--- a/tools-c++/src/CMakeLists.txt
+++ b/tools-c++/src/CMakeLists.txt
@@ -54,3 +54,10 @@ target_link_libraries (file-statistics
   orc
   ${PROTOBUF_LIBRARIES}
   ) 
+
+install(TARGETS
+   file-contents
+   file-metadata
+   file-scan
+   file-statistics
+   DESTINATION bin)
