Remove assumption that zlib.h is install in system.

--- a/tools-c++/test/CMakeLists.txt
+++ b/tools-c++/test/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories(
   ${PROJECT_BINARY_DIR}/orc-c++/include
   ${PROJECT_BINARY_DIR}/orc-c++/src
   ${PROTOBUF_INCLUDE_DIRS}
+  ${ZLIB_INCLUDE_DIRS}
   ${GMOCK_INCLUDE_DIRS}
 )
 
