--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,13 @@
 version: 1.0.{build}
 branches:
   only:
-  - c++09
   - c++
 build_script:
 - mkdir _vc10
 - cd _vc10
-- cmake -DCMAKE_MAKE_PROGRAM=C:/Windows/Microsoft.NET/Framework/v4.0.30319/MSBuild.exe -G "Visual Studio 10" ..
+- cmake -DCMAKE_MAKE_PROGRAM=C:/Windows/Microsoft.NET/Framework/v4.0.30319/MSBuild.exe -DC09 -G "Visual Studio 10" ..
 - cmake --build .
+- echo "Running ctest"
 - ctest
 notifications:
 - provider: Email
