--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ branches:
 build_script:
 - mkdir _vc10
 - cd _vc10
-- cmake -DCMAKE_MAKE_PROGRAM=C:/Windows/Microsoft.NET/Framework/v4.0.30319/MSBuild.exe -DC09 -G "Visual Studio 10" ..
+- cmake -DCMAKE_MAKE_PROGRAM=C:/Windows/Microsoft.NET/Framework/v4.0.30319/MSBuild.exe -DC09=true -G "Visual Studio 10" ..
 - cmake --build .
 - echo "Running ctest"
 - ctest
