--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ cmake_minimum_required (VERSION 2.6)
 
 project(ORC)
 
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+
 # Version number of package
 SET(CPACK_PACKAGE_VERSION_MAJOR "1")
 SET(CPACK_PACKAGE_VERSION_MINOR "0")
@@ -24,6 +26,7 @@ SET(ORC_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.$
 SET(CPACK_GENERATOR "TGZ")
 
 INCLUDE(CPack)
+INCLUDE(Protobuf)
 
 set (GMOCK_VERSION "1.7.0")
 set (GMOCK_INCLUDE_DIRS
@@ -39,6 +42,7 @@ set (PROTOBUF_VERSION "2.6.0")
 set (PROTOBUF_INCLUDE_DIRS
      "${CMAKE_SOURCE_DIR}/orc-c++/libs/protobuf-${PROTOBUF_VERSION}/src")
 set (PROTOBUF_LIBRARIES protobuf)
+set (PROTOBUF_PROTOC_EXECUTABLE "${CMAKE_BINARY_DIR}/orc-c++/libs/protobuf-${PROTOBUF_VERSION}/protoc")
 
 set (SNAPPY_VERSION "1.1.2")
 set (SNAPPY_INCLUDE_DIRS
