--- a/orc-c++/src/orc/CMakeLists.txt
+++ b/orc-c++/src/orc/CMakeLists.txt
@@ -10,32 +10,49 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-include_directories(
-  ${PROJECT_SOURCE_DIR}/orc-c++/include
-  ${PROJECT_SOURCE_DIR}/orc-c++/src
-  ${PROJECT_SOURCE_DIR}/tools-c++/src
-  ${PROJECT_BINARY_DIR}/orc-c++/include
+include_directories (
+  ${CMAKE_CURRENT_SOURCE_DIR}
   ${PROJECT_BINARY_DIR}/orc-c++/src
-  ${PROJECT_BINARY_DIR}/orc-c++/src/orc
+  ${PROJECT_SOURCE_DIR}/orc-c++/src
   ${PROTOBUF_INCLUDE_DIRS}
   ${ZLIB_INCLUDE_DIRS}
-  ${GMOCK_INCLUDE_DIRS}
-)
+  ${SNAPPY_INCLUDE_DIRS}
+  )
+
+set (PROTOBUF_IMPORT_DIRS ${CMAKE_SOURCE_DIR}/proto)
+protobuf_generate_cpp(ORC_PROTO_SRCS ORC_PROTO_HDRS "${CMAKE_SOURCE_DIR}/proto/orc_proto.proto")
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS} ${WARN_FLAGS}")
 
-add_executable (tool-test
-  gzip.cc
-  TestReader.cc
-  ToolTest.cc
-)
+if (C09)
+  set (ADAOPTOR_CLASS "C09Adapter.cc")
+endif (C09)
 
-target_link_libraries (tool-test
-  orc
+add_library (orc STATIC
+  ${ADAPTOR_CLASS}
+  orc_proto.pb.h
+  orc-proto-wrapper.cc
+  ByteRLE.cc
+  ColumnPrinter.cc
+  ColumnReader.cc
+  Compression.cc
+  Exceptions.cc
+  Int128.cc
+  MemoryPool.cc
+  OrcFile.cc
+  Reader.cc
+  RLEv1.cc
+  RLEv2.cc
+  RLE.cc
+  TypeImpl.cc
+  Vector.cc
+  )
+
+install(TARGETS orc DESTINATION lib)
+
+target_link_libraries (orc
   ${PROTOBUF_LIBRARIES}
-  ${GMOCK_LIBRARIES}
   ${ZLIB_LIBRARIES}
   ${SNAPPY_LIBRARIES}
-)
+  )
 
-add_test (tool-test tool-test ${EXAMPLE_DIRECTORY})
