Resolved #134, #49. Replaced unsigned long with uint64_t, signed long with int64_t. Also, enabled type conversion check for gcc.

--- a/orc-c++/CMakeLists.txt
+++ b/orc-c++/CMakeLists.txt
@@ -33,4 +33,6 @@ install(FILES
 
 add_subdirectory(libs)
 add_subdirectory(src)
-add_subdirectory(test)
+if(NOT C09)
+  add_subdirectory(test)
+endif(NOT C09)
