Fix #191. Fix #192. Fix some of the left over type issues that were causing warnings on clang/macos.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,9 +83,9 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
   set (WARN_FLAGS "${WARN_FLAGS} -Wno-c++98-compat-pedantic -Wno-padded")
   set (WARN_FLAGS "${WARN_FLAGS} -Wno-covered-switch-default")
   set (WARN_FLAGS "${WARN_FLAGS} -Wno-missing-noreturn -Wno-unknown-pragmas")
-  set (WARN_FLATS "${WARN_FLAGS} -Werror")
+  set (WARN_FLAGS "${WARN_FLAGS} -Wconversion -Werror")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-  set (WARN_FLAGS "-Wall -Wno-unknown-pragmas -Werror")
+  set (WARN_FLAGS "-Wall -Wno-unknown-pragmas -Wconversion -Werror")
 endif ()
 
 if (NOT MSVC)
